[tool.poetry]
name = "kml2geojson"
version = "5.1.0"
description = "A Python library to covert KML files to GeoJSON files"
authors = ["Alex Raichev <alex@raichev.net>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mrcagney/kml2geojson"
documentation = "https://mrcagney.github.io/kml2geojson_docs"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
click = ">=8.0.1"

[tool.poetry.dev-dependencies]
jupyter = ">=1.0.0"
pytest = ">=6.2.5"
Sphinx = ">=4.2.0"
publish-sphinx-docs = "1.0.3"
pre-commit = ">=2.18.1"
black = ">=22.3.0"

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
k2g = "kml2geojson.cli:k2g"
